tests/compile_fail/non_empty_struct_without_derive.stderr
error[E0277]: the trait bound `RegularStruct: NonEmptyStruct` is not satisfied
  --> tests/compile_fail/non_empty_struct_without_derive.rs:17:43
   |
17 |     _assert_implements_non_empty_struct::<RegularStruct>();
   |                                           ^^^^^^^^^^^^^ the trait `NonEmptyStruct` is not implemented for `RegularStruct`
   |
note: required by a bound in `_assert_implements_non_empty_struct`
  --> tests/compile_fail/non_empty_struct_without_derive.rs:16:47
   |
16 |     fn _assert_implements_non_empty_struct<T: NonEmptyStruct>() {}
   |                                               ^^^^^^^^^^^^^^ required by this bound in `_assert_implements_non_empty_struct`
